--- a/orderless.texi
+++ b/orderless.texi
@@ -77,7 +77,10 @@ tab completion), with the built-in Icomplete package (which is similar
 to the more well-known Ido Mode), or with some third party completion
 frameworks such as @uref{https://github.com/raxod502/selectrum, Selectrum}. To use a completion style in this
 fashion simply add it as an entry in the variables @samp{completion-styles}
-and @samp{completion-category-overrides} (see their documentation).
+and @samp{completion-category-overrides} (see their documentation). You may
+also want to modify the @samp{completion-category-defaults} variable, which
+serves as a default value for @samp{completion-category-overrides}: if you
+want to use @samp{orderless} exclusively, set both variables to @samp{nil}.
 
 With a bit of effort, it might still be possible to use @samp{orderless} with
 other completion UIs, even if those UIs don't support the standard
@@ -368,7 +371,8 @@ To use @samp{orderless} from Ivy add this to your Ivy configuration:
 @section Selectrum
 
 Recent versions of Selectrum default to using whatever completion
-styles you have configured. You can use @samp{orderless} that way, or you can use this configuration:
+styles you have configured. You can use @samp{orderless} that way, or you can
+use this configuration:
 
 @lisp
 (setq selectrum-refine-candidates-function #'orderless-filter)
