README: Add variable category to orderless+initialism sample
Marginalia provides the command, symbol and variable categories.

--- a/README.org
+++ b/README.org
@@ -245,7 +245,8 @@ completion category.
                                  orderless-regexp)))
   (setq completion-category-overrides
         '((command (styles orderless+initialism))
-          (symbol (styles orderless+initialism))))
+          (symbol (styles orderless+initialism))
+          (variable (styles orderless+initialism))))
 #+end_src
 
 Note that in order for the =orderless+initialism= style to kick-in with
