--- a/orderless.texi
+++ b/orderless.texi
@@ -75,14 +75,24 @@ A completion style is a back-end for completion and is used from a
 front-end that provides a completion UI@. Any completion style can be
 used with the default Emacs completion UI (sometimes called minibuffer
 tab completion), with the built-in Icomplete package (which is similar
-to the more well-known Ido Mode), or with some third party completion
-frameworks such as @uref{https://github.com/minad/vertico, Vertico}, @uref{https://github.com/raxod502/selectrum, Selectrum} (in its default configuration),
-or @uref{https://github.com/oantolin/icomplete-vertical, icomplete-vertical} (note there is also a @emph{built-in} package named
-icomplete-vertical in the unreleased version 28 of Emacs, which will
-eventually make the third party icomplete-vertical obsolete
----orderless works equally well with both icomplete-vertical
-packages). To use a completion style with any of these completion UIs
-simply add it as an entry in the variables @samp{completion-styles} and
+to the more well-known Ido Mode), or with some third party minibuffer
+completion frameworks such as @uref{https://github.com/minad/vertico, Vertico}, @uref{https://github.com/raxod502/selectrum, Selectrum} (in its default
+configuration), or @uref{https://github.com/oantolin/icomplete-vertical, icomplete-vertical} (note there is also a @emph{built-in}
+package named icomplete-vertical in the unreleased version 28 of
+Emacs, which will eventually make the third party icomplete-vertical
+obsolete ---orderless works equally well with both icomplete-vertical
+packages).
+
+All the completion UIs just mentioned are for minibuffer completion,
+used when Emacs commands prompt the user in the minibuffer for some
+input, but there is also completion at point in normal buffers,
+typically used for identifiers in programming languages. Completion
+styles can also be used for that purpose by completion at point UIs
+such as @uref{https://github.com/minad/corfu, Corfu}, @uref{https://company-mode.github.io/, Company} or the function @samp{consult-completion-in-region}
+from @uref{https://github.com/minad/consult, Consult}.
+
+To use a completion style with any of the above mentioned completion
+UIs simply add it as an entry in the variables @samp{completion-styles} and
 @samp{completion-category-overrides} (see their documentation). You may also
 want to modify the @samp{completion-category-defaults} variable, which serves
 as a default value for @samp{completion-category-overrides}: if you want to
@@ -91,7 +101,9 @@ use @samp{orderless} exclusively, set both variables to @samp{nil}.
 With a bit of effort, it might still be possible to use @samp{orderless} with
 other completion UIs, even if those UIs don't support the standard
 Emacs completion styles. Currently there is support for @uref{https://github.com/abo-abo/swiper, Ivy} (see
-below).
+below). Also, while Company does support completion styles directly,
+pressing @samp{SPC} takes you out of completion, so comfortably using
+@samp{orderless} with it takes a bit of configuration (see below).
 
 If you use MELPA, the easiest way to install @samp{orderless} is via
 @samp{package-install}. If you use both MELPA and @samp{use-package}, you can use:
